--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cra-template": "1.0.3",
     "fslightbox-react": "^1.5.0",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-awesome-lightbox": "^1.7.3",
     "react-dom": "^16.13.1",
